[package]
name = "cursor_asteroids"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console"
]}
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.8"
nalgebra = { version = "0.33", default-features = false, features = ["libm", "std"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
